# arcadia-sdk-rs

./: Cargo.toml  README.md
src/: lib.rs
src/client/: arcadia.rs  medusa.rs  medusa_rpc.rs  medusa_ws.rs  mod.rs  spoke.rs
src/error/: mod.rs
src/types/: conversion.rs  events.rs  intents.rs  mod.rs  receipt.rs  rpc_payloads.rs  sol_types.rs  solution.rs  token.rs  ws.rs
src/types/config/: mod.rs
src/types/config/registry/: arcadia_registry.rs  mod.rs  spoke_registry.rs
src/types/medusa/: common.rs  mod.rs  sol_types.rs  solution.rs  ws.rs
src/types/rpc/: events.rs  intents.rs  mod.rs  refinement.rs
src/types/solidity/: contract.rs  mod.rs
tests/: intent.json  test_client.rs  test_config.rs  test_intent.rs
tests/config/: arbitrum.json  arcadia.json
