[package]
name = "arcadia-sdk-rs"
version = "0.1.0"
edition = "2024"

[dependencies]

alloy = { version = "1.0.6", features = [
    "full",
    "signer-aws",
    "dyn-abi",
    "eip712",
] }
anyhow = "1.0.98"
base64 = "0.22.0"
bcs = "0.1.4"
futures = "0.3.31"
hex = "0.4.3"
hyper-tls = "0.6.0"
jsonrpsee = { version = "0.25.1", features = ["full"] }
rand = "0.9.0"
reqwest = "0.12.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3.14.0"
thiserror = "2.0.12"
tokio = { version = "1.41.1", features = ["full"] }
tokio-tungstenite = "0.28.0"
tracing = "0.1.39"
url = "2.5.2"
