[package]
name = "arcadia-sdk-rs"
version = "0.1.0"
edition = "2024"

[features]
ws-native-tls = ["tokio-tungstenite/native-tls"]
ws-rustls = ["tokio-tungstenite/rustls", "tokio-tungstenite/rustls-tls-native-roots"]

[dependencies]
alloy = { version = "1.0.38", features = [
    "eip712",
    "rand",
] }
anyhow = "1.0.98"
futures = "0.3.31"
jsonrpsee = { version = "0.26.0", features = ["client", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3.14.0"
thiserror = "2.0.12"
tokio = "1.41.1"
tokio-tungstenite = "0.28.0"
tracing = "0.1.39"
